--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,14 @@
   "compileOnSave": false,
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
+    "paths": {
+      "@sc-modules/*": ["src/app/modules/*"],
+      "@sc-core/*": ["src/app/core/*"],
+      "@sc-shared/*": ["src/app/shared/*"],
+    },
     "forceConsistentCasingInFileNames": true,
     "strict": true,
+    "baseUrl": "./",
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
