added student teacher login api complete mobile and desk top design added password functionality

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ngrx/store-devtools": "^17.1.1",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "material-symbols": "^0.17.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
