--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "material-symbols": "^0.17.0",
+    "ngx-cookie-service": "^17.1.0",
+    "ngx-cookie-service-ssr": "^17.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
