--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:School-Compass-365-fe": "node dist/school-compass-365-fe/server/server.mjs",
+    "serve:ssr": "node dist/school-compass-365-fe/server/server.mjs",
     "lint": "ng lint"
   },
   "private": true,
