--- a/angular.json
+++ b/angular.json
@@ -36,9 +36,9 @@
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
+              "bootstrap/scss/bootstrap.scss",
               "src/styles.scss",
-              "material-symbols/index.scss",
-              "bootstrap/scss/bootstrap.scss"
+              "material-symbols/index.scss"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
@@ -52,8 +52,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "1mb",
+                  "maximumError": "5mb"
                 },
                 {
                   "type": "anyComponentStyle",
