--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/core": "^19.0.5",
     "@angular/forms": "^19.0.5",
     "@angular/material": "^19.0.4",
+    "@angular/material-moment-adapter": "^19.0.4",
     "@angular/platform-browser": "^19.0.5",
     "@angular/platform-browser-dynamic": "^19.0.5",
     "@angular/platform-server": "^19.0.5",
