--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@angular/platform-server": "^19.0.5",
     "@angular/router": "^19.0.5",
     "@angular/ssr": "^19.0.6",
+    "@ngneat/overview": "6.1.1",
     "@ngrx/effects": "^19.0.0",
     "@ngrx/eslint-plugin": "^19.0.0",
     "@ngrx/store": "^19.0.0",
     "@ngrx/store-devtools": "^19.0.0",
+    "@ngxpert/hot-toast": "^4.1.1",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "material-symbols": "^0.17.0",
@@ -38,6 +40,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.0.6",
+    "@angular-devkit/core": "^19.0.6",
     "@angular-eslint/builder": "19.0.2",
     "@angular-eslint/eslint-plugin": "19.0.2",
     "@angular-eslint/eslint-plugin-template": "19.0.2",
