--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "material-symbols": "^0.17.0",
     "moment": "^2.30.1",
     "rxjs": "~7.8.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
